--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
 	</div>
 
-	<div id="contactTable">
+	<div id="contactTableDiv">
 
 	</div>
 
-	<div id="contactInfo">
+	<div id="contactInfoDiv">
 
 	</div>
 
-	<div id="addContact">
+	<div id="addContactDiv">
 
 	</div>
 
-	<div id="editContact">
+	<div id="editContactDiv">
 
-	</div>	
+	</div>
 </body>
 </html>
