--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1 id="title">Contact Manager</h1>
+<h1 id="title">The Team Six Star Contact Manager 2019</h1>
 
 <div id="loginDiv">
 	<span id="inner-title">PLEASE LOG IN</span>
