Add & Search finished, Edit / Delete / Register TODO

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<input type="text" id="emailText" placeholder="E-Mail">
 	<input type="text" id="plevelText" placeholder="Power Level">
 	<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br />
-	<span id="contactAddResult"></span>
+	<span id="ContactAddResult"></span>
 </div>
 
 </body>
