--- a/index.html
+++ b/index.html
@@ -15,10 +15,20 @@
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Log In </button>
 	<span id="loginResult"></span>
+	<button type="button" id="registerButton" class="buttons" onclick="openRegister();"> Register </button>
 </div>
 <div id="loggedInDiv" style="display:none; visibility:hidden;">
 	<span id="userName"></span><br />
 	<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
+</div>
+
+<div id="registerDiv" style="display:none; visibility:hidden;">
+	<span id="inner-title"> Create Account </span>
+	<input type="text" id="registerName" placeholder="Username" /><br />
+	<input type="password" id="registerPassword" placeholder="Password" /><br />
+	<input type="password" id="verificationPassword" placeholder="Re-Enter Password" /><br />
+	<button type="button" id="createAccountButton" class="buttons" onclick="doRegister()"> Register Account </button>
+	<span id="registerResult"></span>
 </div>
 <div id="accessUIDiv" style="display:none; visibility:hidden;">
 	<br />
