--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div id="contactControlDiv" style="display:none; visibility:hidden;">
 		<input type="text" id="contactSearch" placeholder="Search your contacts">
 		<button type="button" id="contactSearchButton" class="buttons" onclick="searchContacts();">Search</button>
-		<button type="button" id="showAddNewContactButton" class="buttons" onclick="showAddContact();">Add Contact</button>
+		<button type="button" id="showAddNewContactButton" class="buttons" onclick="displayAddContact();">Add Contact</button>
 		<button type="button" id="logoutButton" class="buttons" onclick="doLogout();">Logout</button><br>
 		<span id="contactSearchResult"></span>
 		<select id="contactList" style="display:none; visibility:hidden;">
@@ -52,6 +52,8 @@
 		<span id="selectedLastName"></span><br>
 		<label for="selectedEmail">Email</label>
 		<span id="selectedEmail"></span><br>
+		<label for="newAddress">Address </label>
+		<input type="text" id="newAddress"><br>
 		<label for="selectedPhoneNumber">Phone Number</label>
 		<span id="selectedPhoneNumber"></span><br>
 		<label for="selectedPowerLevel">Power Level</label>
@@ -67,12 +69,14 @@
 		<input type="text" id="newLastName"><br>
 		<label for="newEmail">Email </label>
 		<input type="email" id="newEmail"><br>
+		<label for="newAddress">Address </label>
+		<input type="text" id="newAddress"><br>
 		<label for="newPhoneNumber">Phone Number </label>
 		<input type="tel" id="newPhoneNumber"><br>
 		<label for="newPowerLevel">Power Level </label>
 		<input type="number" id="newPowerLevel"><br>
 		<button type="button" id="enterNewContactButton" class="buttons" onclick="addContact();">Add</button>
-		<button type="button" id="enterNewContactButton" class="buttons" onclick="cancelAddContact();">Cancel</button>
+		<button type="button" id="cancelNewContactButton" class="buttons" onclick="cancelAddContact();">Cancel</button>
 	</div>
 	<div id="editContactDiv" style="display:none; visibility:hidden;">
 <span id="new-contact-title">EDIT CONTACT</span><br>
@@ -87,8 +91,8 @@
 		<input type="tel" id="editedPhoneNumber"><br>
 		<label for="editedPowerLevel">Power Level</label>
 		<input type="number" id="editedPowerLevel"><br>
-		<button type="button" id="enterEditedContactButton" class="buttons" onclick="editContact();">Confirm</button>
-		<button type="button" id="enterNewContactButton" class="buttons" onclick="cancelEditContact();">Cancel</button>
+		<button type="button" id="enterEditContactButton" class="buttons" onclick="editContact();">Confirm</button>
+		<button type="button" id="cancelEditContactButton" class="buttons" onclick="cancelEditContact();">Cancel</button>
 	</div>
 </body>
 </html>
