--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 		<span id="selectedLastName"></span><br>
 		<label for="selectedEmail">Email</label>
 		<span id="selectedEmail"></span><br>
-		<label for="newAddress">Address </label>
-		<input type="text" id="newAddress"><br>
+		<label for="selectedAddress">Address </label>
+		<input type="text" id="selectedAddress"><br>
 		<label for="selectedPhoneNumber">Phone Number</label>
 		<span id="selectedPhoneNumber"></span><br>
 		<label for="selectedPowerLevel">Power Level</label>
