Fixed contactAddResult and removed debug statement

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<span id="selectedPowerLevel"></span><br>
 		<button type="button" id="deleteContactButton" class="buttons" onclick="deleteContact();">Delete</button>
 		<button type="button" id="editContactButton" class="buttons" onclick="showEditContact();">Edit</button>
+		<span id="contactAddResult"></span>
 	</div>
 	<div id="addContactDiv" style="display:none; visibility:hidden;">
 		<span id="new-contact-title"> ADD NEW CONTACT</span><br>
