Matched searchContact() in html and js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</div>
 	<div id="contactControlDiv" style="display:none; visibility:hidden;">
 		<input type="text" id="contactSearch" placeholder="Search your contacts">
-		<button type="button" id="contactSearchButton" class="buttons" onclick="searchContacts();">Search</button>
+		<button type="button" id="contactSearchButton" class="buttons" onclick="searchContact();">Search</button>
 		<button type="button" id="showAddNewContactButton" class="buttons" onclick="displayAddContact();">Add Contact</button>
 		<button type="button" id="logoutButton" class="buttons" onclick="doLogout();">Logout</button><br>
 		<span id="contactSearchResult"></span>
