--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	<!-- Footer -->
 	<footer>
 		<div class="footBanner">
-			<p> Copy Right &copy; 2019 TeamSixStar</p>
+			<p> Copyright &copy; 2019 TeamSixStar</p>
 		</div>
 	</footer>
 </body>
