--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type"text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="icon" type="image/png" href="images/favicon.png">
 </head>
     
 <body>
