Fixing submit contact function

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 			<label for="editedPowerLevel">Power Level</label>
 			<input type="number" id="editedPowerLevel"><br>
 			<span id="contactID" style="display:none; visibility:hidden;"></span>
+			<span id="row" style="display:none; visibility:hidden;"></span>
 			<button type="button" id="enterEditContactButton" class="buttons" onclick="editContact();">Edit</button>
 			<button type="button" id="submitContact" class="buttons" onclick="submitContact();">Submit</button>
 			<button type="button" id="cancelEditContactButton" class="buttons" onclick="cancelEditContact();">Cancel</button>
