fixing submitContact function

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 			<button type="button" id="enterEditContactButton" class="buttons" onclick="editContact();">Edit</button>
 			<button type="button" id="submitContact" class="buttons" onclick="submitContact();">Submit</button>
 			<button type="button" id="cancelEditContactButton" class="buttons" onclick="cancelEditContact();">Cancel</button>
+			<span id="submitError"></span>
 		</div>
 	</main>
 
