fixing submit function

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				<span id="contactID" style="display:none; visibility:hidden;"></span>
 				<span id="row" style="display:none; visibility:hidden;"></span>
 				<button type="button" id="enterEditContactButton" class="buttons" onclick="editContact();">Edit</button>
-				<button type="button" id="submitContact" class="buttons" onclick="submitContact();">Submit</button>
+				<button type="button" id="submitContactBut" class="buttons" onclick="submitContact();">Submit</button>
 				<button type="button" id="cancelEditContactButton" class="buttons" onclick="cancelEditContact();">Cancel</button>
 				<span id="submitError"></span>
 			</form>
