Fixing functions not working bug

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
 
 		</div> -->
-	    
+
 	    <!--Add contact (includes buttons for adding and cancelling new contact)-->
         <div id="addContactDiv" class="contactModal">
             <div class="modal-content">
@@ -115,6 +115,7 @@
                     <button type="button" id="enterNewContactButton" class="buttons" onclick="addContact();">Add</button>
                     <button type="button" id="cancelNewContactButton" class="buttons" onclick="cancelAddContact();">Cancel</button>
                 </div>
+			</div>
 		</div>
 
 		<!--Edit contact allows changes to existing contact (includes buttons for confirming and cancelling changes)-->
