Removed <form> tag

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
        <div id="editContactDiv" class="editContactModal">
             <div class="modal-content">
                 <h2 id="title">Edit Contact</h2>
-                <form id="editContactDivForm">
+        <!--        <form id="editContactDivForm">	-->
                     <label for="editedFirstName">First Name</label>
                     <input type="text" id="editedFirstName"><br>
                     <label for="editedLastName">Last Name</label>
@@ -140,7 +140,7 @@
                         <button type="button" id="cancelEditContactButton" class="buttons" onclick="cancelEditContact();">Cancel</button>
                         <span id="submitError"></span>
                     </div>
-                </form>
+        <!--     </form>	-->
             </div>
 		</div>
 	</main>
