One last try for Kennys Animations

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </table>
         </div>
         
-        <div id="addRes" class="modal-two">
+        <div id="addRes" class="modal-add">
             <div class="confirmModal">
                 <img class="roshi-img" src="images/roshi-peace.png" alt="Master Roshi">
                 <span id="contactAddResult"></span>
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div id="searchRes" class="modal-two">
+        <div id="searchRes" class="modal-search">
             <div class="confirmModal">
                 <img class="roshi-img" src="images/roshi-peace.png" alt="Master Roshi">
                 <span id="contactSearchResult"></span>
