Revert "Hopefully Kenny's Final changes"

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </div>
 
-        <!-- <div id="searchRes" class="modal-search">
+        <div id="searchRes" class="modal-search">
             <div class="confirmModal">
                 <img class="roshi-img" src="images/roshi-peace.png" alt="Master Roshi">
                 <span id="contactSearchResult"></span>
