--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
             <q>Me personally, I like to work and train.</q><p>- Son Goku</p>
         </div>
 
-        <!-- <img id="sonGoku" src="images/goku.png" alt="Team Six Star"> -->
-
         <!--Login-->
         <div id="loginDiv">
             <h2 id="title">Scouter Login</h2>
@@ -98,12 +96,12 @@
             </div>
         </div>
 
-        <!-- <div id="searchRes" class="modal-search">
+        <div id="searchRes" class="modal-search">
             <div class="confirmModal">
                 <img class="roshi-img" src="images/roshi-peace.png" alt="Master Roshi">
                 <span id="contactSearchResult"></span>
             </div>
-        </div> -->
+        </div>
 
 	    <!--Add contact (includes buttons for adding and cancelling new contact)-->
         <div id="addContactDiv" class="modal">
