Kennys final ultra last changes redux

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
 	<!-- Header -->
     <header>
-        <!-- <img class="banner-img" src="images/sixstar.png" alt="Team Six Star"> -->
     </header>
 
     <!-- Main body -->
@@ -69,7 +68,6 @@
                 <button type="button" id="cancelRegisterButton" class="buttons" onclick="hideRegister();">Cancel</button>
             </div>
         </div>
-        
     </div>
 
 		<!--Logged in control panel (includes search, add, logout buttons)-->
@@ -96,12 +94,12 @@
             </div>
         </div>
 
-        <div id="searchRes" class="modal-search">
+        <!-- <div id="searchRes" class="modal-search">
             <div class="confirmModal">
                 <img class="roshi-img" src="images/roshi-peace.png" alt="Master Roshi">
                 <span id="contactSearchResult"></span>
             </div>
-        </div>
+        </div> -->
 
 	    <!--Add contact (includes buttons for adding and cancelling new contact)-->
         <div id="addContactDiv" class="modal">
