--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Team Six Star</title>
+	<title>Team Six Star's Scouter Contacts</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,400i,700" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Capriola&display=swap" rel="stylesheet">
@@ -157,7 +157,7 @@
 
 	<!-- Footer -->
 	<footer>
-        <p> Copy Right &copy; 2019 TeamSixStar</p>
+        <p> Copyright &copy; 2019 TeamSixStar</p>
     </footer>
 </body>
 </html>
